--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <div class="service">
                             <div class="icon-box">
                             	<span class="icon">
-                                    <i class="ion-android-desktop"></i>   
+                                    <i class="ion-android-desktop" color="#fff"></i>   
                                 </span>
                             </div>
                             <div class="caption">
@@ -185,7 +185,7 @@
                         <div class="service">
                             <div class="icon-box">
                             	<span class="icon">
-                                    <i class="ion-speedometer"></i>   
+                                    <i class="ion-speedometer" color="#fff"></i>   
                                 </span>
                             </div>
                             <div class="caption">
@@ -198,7 +198,7 @@
                         <div class="service">
                             <div class="icon-box">
                             	<span class="icon">
-                                    <i class="ion-ios-infinite-outline"></i>   
+                                    <i class="ion-ios-infinite-outline" color="#fff"></i>   
                                 </span>
                             </div>
                             <div class="caption">
@@ -211,7 +211,7 @@
                         <div class="service">
                             <div class="icon-box">
                             	<span class="icon">
-                                    <i class="ion-ios-cloud-outline"></i>   
+                                    <i class="ion-ios-cloud-outline" color="#fff"></i>   
                                 </span>
                             </div>
                             <div class="caption">
