--- a/index.html
+++ b/index.html
@@ -73,11 +73,6 @@
 	        </div><!-- /.container-fluid -->
 	    </div>
 
-        <a href="http://wa.me/5585989037373" target="_blank" class="whatsapp-float">
-            <i class="fab fa-whatsapp"></i>
-            <span class="whatsapp-tooltip">Fale conosco!</span>
-        </a>
-
 	    <section id="hero-area">
 	        <div class="container">
 	            <div class="row">
@@ -332,7 +327,13 @@
         	<div class="map-wrapper">
         	</div>
         </section>
-
+        
+        <a href="https://wa.me/SEU_NUMERO" target="_blank" class="whatsapp-float">
+            <i class="fab fa-whatsapp"></i>
+            <span class="notification">1</span> <!-- Bolinha de notificação -->
+            <span class="whatsapp-tooltip">Fale conosco!</span>
+        </a>
+        
         <footer>
             <div class="container">
                 <div class="row">
